# rust-monorepo

./: .editorconfig  .env  .gitignore  Cargo.toml  Dockerfile  README.md  cars-openapi.yaml  package-lock.json  package.json
.github/workflows/: build.yml
backend/: .env  Cargo.toml
backend/migrations/2022-12-03-205458_create_cars/: up.sql
backend/migrations/2022-12-03-211703_load_cars/: down.sql  up.sql
backend/src/: main.rs
backend/src/api/: mod.rs  model.rs
backend/src/db/: car.rs  schema.rs
frontend/: .env.production  package-lock.json
migrations/2022-12-03-205458_create_cars/: down.sql  up.sql
migrations/2022-12-03-211703_load_cars/: down.sql  up.sql
src/: api.rs  car.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
src/api/: mod.rs
src/db/: car.rs  mod.rs
src/main/webapp/app/: App.tsx
src/main/webapp/public/: index.html
