[package]
name = "rust-monorepo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["postgres", "chrono", "numeric"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15.6"
